# DSEQ

./: .gitignore  README.md  pyproject.toml
.github/workflows/: autoformat.yml  publish.yml  python-app.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/vignettes/: exploring_results.md  getting_started.md  more_advanced_models.md
pySEQTarget/: SEQopts.py  SEQoutput.py  SEQuential.py
pySEQTarget/analysis/: __init__.py  _hazard.py  _outcome_fit.py  _risk_estimates.py  _subgroup_fit.py  _survival_pred.py
pySEQTarget/error/: __init__.py  _check_separation.py  _data_checker.py  _param_checker.py
pySEQTarget/expansion/: __init__.py  _binder.py  _diagnostics.py  _dynamic.py  _mapper.py  _selection.py
pySEQTarget/helpers/: __init__.py  _bootstrap.py  _fix_categories.py  _glum_fit.py  _jax_fit.py  _jax_logistic.py  _offloader.py  _output_files.py  _predict_model.py
pySEQTarget/initialization/: __init__.py  _outcome.py
pySEQTarget/plot/: __init__.py  _survival_plot.py
pySEQTarget/weighting/: __init__.py  _weight_bind.py  _weight_fit.py  _weight_offload.py  _weight_pred.py  _weight_stats.py
tests/: test_categorical_covariates.py  test_check_separation.py  test_coefficients.py  test_compevent_diagnostics.py  test_covariates.py  test_cox.py  test_expansion.py  test_fix_categories.py  test_followup_diagnostics.py  test_followup_options.py  test_glum.py  test_hazard.py  test_jax.py  test_no_variation.py  test_offload.py  test_parallel.py  test_plot.py  test_reproducibility.py  test_survival.py
