[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySEQTarget"
version = "0.10.4"
description = "Sequentially Nested Target Trial Emulation"
readme = "README.md"
license = {text = "MIT"}
keywords = ["causal inference", "sequential trial emulation", "target trial", "observational studies"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

authors = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"},
    {name = "Alejandro Szmulewicz", email = "aszmulewicz@hsph.harvard.edu"},
    {name = "Tom Palmer", email = "tom.palmer@bristol.ac.uk"},
    {name = "Miguel Hernan", email = "mhernan@hsph.harvard.edu"},
]

maintainers = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"},
]

dependencies = [
    "numpy",
    "polars",
    "tqdm",
    "statsmodels",
    "matplotlib",
    "pyarrow",
    "lifelines"
]

[project.optional-dependencies]
output = [
    "markdown",
    "weasyprint",
    "tabulate"
]

[project.urls]
Homepage = "https://github.com/CausalInference/pySEQTarget"
Repository = "https://github.com/CausalInference/pySEQTarget"
"Bug Tracker" = "https://github.com/CausalInference/pySEQTarget/issues"
"Ryan O'Dea (ORCID)" = "https://orcid.org/0009-0000-0103-9546"
"Alejandro Szmulewicz (ORCID)" = "https://orcid.org/0000-0002-2664-802X"
"Tom Palmer (ORCID)" = "https://orcid.org/0000-0003-4655-4511"
"Miguel Hernan (ORCID)" = "https://orcid.org/0000-0003-1619-8456"
"University of Bristol (ROR)" = "https://ror.org/0524sp257"
"Harvard University (ROR)" = "https://ror.org/03vek6s52"

[dependency-groups]
dev = [
    "black",
    "isort",
    "pytest",
    "myst-parser",
    "piccolo_theme",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pySEQTarget*"]

[tool.setuptools.package-data]
SEQdata = ["data/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
